# TP-BPMN-Compiler

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  out.dot
src/: main.c
src/backend/code-generation/: generator.c  generator.h
src/backend/domain-specific/: validateProgram.c  validateProgram.h
src/backend/semantic-analysis/: abstract-syntax-tree.h
src/backend/support/: logger.c  logger.h  shared.h
src/backend/symbol-table/: symbol-table.c  symbol-table.h
src/frontend/lexical-analysis/: flex-actions.c  flex-actions.h  flex-patterns.l  flex-scanner 2.c
src/frontend/syntactic-analysis/: bison-actions.c  bison-actions.h  bison-grammar.y  bison-parser 2.c  bison-parser 2.h
test/: ejdot.dot
test/accept/: 01  Activity  Artifact  ConnectionsBeforeCreation  CreateGateway  GraphConnectEvents  InitialEvent  MultiplePools  MultiplePools2FinalEvents  NoNameLane  OneConnectGateway  Pool  PoolWithLane  PoolWithLaneInLane  PoolWithMultipleLanes  StorageArtifact  aux
test/reject/: 02  03  04  2EventsWithSameName  EmptyGraph  FinalConnect  FinalEventWithConnect  GraphWithNoInitialAndNoFinal  LaneWithoutExpressions  LaneWithoutPool  MultipleErrorGraph  NotClosePool  PoolInsidePool  PoolWithLaneInLane  WithoutEndGraph  WrongVarNames
